# flask_books

./: __init__.py  pyproject.toml  requirements.txt
app/: __init__.py  database.db  forms.py  models.py  routes.py
app/account/: views.py
app/auth/: views.py
app/book/: views.py
app/templates/: index.html  user-detail.html
app/templates/bases/: base.html
app/templates/book/: user_add_book.html
app/templates/componets/: alert.html  nav.html
tests/: test_app.py
