[tool.poetry]
name = "flask_books"
version = "0.1.0"
description = ""
authors = ["Leo Graciano <leonardoferreiragraciano@gmail.com>"]
readme = "README.md"
packages = [{include = "flask_basic"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
flask-sqlalchemy = "^3.0.2"
flask-login = "^0.6.2"
bootstrap-flask = "^2.2.0"
flask-wtf = "^1.0.1"
wtforms = "^3.0.1"
email-validator = "^1.3.0"
pytest = "^7.2.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"